added tags and comments requests
